--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,22 @@ wp-content/plugins/hello.php
 /readme.html
 /license.txt
 
+### Windows ###
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
