--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,16 @@
-language: php
-php:
-  - '5.4'
-  - '5.5'
-  - '5.6'
-  - '7.0'
-  - hhvm
-  - nightly
-script: phpunit wp-skyltar-widget.php
+env:
+  global:
+    - CI=true
+  matrix:
+    - TEST_DOC=false
+    - TEST_DOC=true
+
+  language: php
+  php:
+    - '5.4'
+    - '5.5'
+    - '5.6'
+    - '7.0'
+    - hhvm
+    - nightly
+  script: phpunit wp-skyltar-widget.php
